Edit Teks Kecocokan Uumur dan Nama

--- a/looping_and_conditional_v2.ipynb
+++ b/looping_and_conditional_v2.ipynb
@@ -323,7 +323,7 @@
     "if nama == 'budi' and umur == 26:\n",
     "  print('nama dan umur cocok!')\n",
     "elif nama == 'budi' or umur == 26:\n",
-    "  print('nama atau umur cocok')\n",
+    "  print('nama atau umur cocok loh')\n",
     "else:\n",
     "  print('nama & umur tidak cocok')"
    ]
