--- a/looping_and_conditional_v2.ipynb
+++ b/looping_and_conditional_v2.ipynb
@@ -674,7 +674,8 @@
     "print(list_buah[0])\n",
     "print(list_buah[1])\n",
     "print(list_buah[2])\n",
-    "print(list_buah[3])"
+    "print(list_buah[3])\n",
+    "print(list_buah[0:4])"
    ]
   },
   {
