Edit Teks Study Case File

--- a/Study_Case_Looping_conditional.ipynb
+++ b/Study_Case_Looping_conditional.ipynb
@@ -251,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ***Terimakasih / Thank You***"
+    "# ***Terimakasih / Thank You / Arigatou***"
    ]
   }
  ],
